@@ -3,4 +3,4 @@ extern void jump(void);
 extern void print_token(void);
 extern void token_name(int type);
 extern void print_next_ten_tokens(void);
-extern void htperror(char * msg, int errno);
+extern void htperror(char * msg, int err_no);
